<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">


    <ImageView
        android:id="@+id/image_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo_green_flag"
        android:contentDescription="@string/logo" />

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_below="@+id/image_logo"
        android:layout_marginTop="100sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">


        <TextView
            android:id="@+id/main_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="2"
            android:text="@string/main_text"
            android:textSize="20sp"
            android:textStyle="normal"
            android:textColor="@color/white"
            android:fontFamily="@font/museo_sans_500"
            android:layout_gravity="center_horizontal"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:paddingTop="30dp"
        android:layout_below="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/tick"
            android:contentDescription="@string/tick1"
            android:layout_marginStart="80dp" />

        <TextView
            android:id="@+id/benefit1"
            android:layout_width="wrap_content"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:text="@string/car_health_updates"
            android:textColor="@color/white"
            android:gravity="center"
            android:paddingLeft="30sp"
            android:fontFamily="@font/museo_sans_300"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear3"
        android:paddingTop="10dp"
        android:layout_below="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/tick"
            android:contentDescription="@string/tick1"
            android:layout_marginStart="80dp" />

        <TextView
            android:id="@+id/benefit2"
            android:layout_width="wrap_content"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:text="@string/request_a_resque_online"
            android:textColor="@color/white"
            android:gravity="center"
            android:paddingStart="30sp"
            android:fontFamily="@font/museo_sans_300"/>

    </LinearLayout>

    <LinearLayout
        android:paddingTop="10dp"
        android:layout_below="@+id/linear3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/tick"
            android:contentDescription="@string/tick1"
            android:layout_marginStart="80dp" />

        <TextView
            android:id="@+id/benefit3"
            android:layout_width="wrap_content"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:text="@string/policy_information"
            android:textColor="@color/white"
            android:gravity="center"
            android:paddingLeft="30sp"
            android:fontFamily="@font/museo_sans_300" />

    </LinearLayout>

    <Button
        android:id="@+id/button_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_background_gradient"
        android:fontFamily="@font/museo_sans_300"
        android:onClick="secondActivity"
        android:shadowColor="@color/white"
        android:text="@string/create_an_account"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="25sp" />




</RelativeLayout>